--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     style="@style/AppTheme"
-    tools:context=".app.view.activity.MainActivity">
+    tools:context=".app.ui.activity.MainActivity">
 
     <LinearLayout
         android:orientation="vertical"
