--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,44 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawerLayout"
+    android:id="@+id/lllayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     style="@style/AppTheme"
     tools:context=".app.ui.activity.MainActivity">
+    <!--添加统一样式的头-->
+    <com.example.krcm110.myapplication.app.view.custome.component.TitleLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </com.example.krcm110.myapplication.app.view.custome.component.TitleLayout>
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawerLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <FrameLayout
+        android:id="@+id/fl_container"
+        android:paddingTop="@dimen/dp56"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <com.example.krcm110.myapplication.app.view.custome.component.TitleLayout
+        android:layout_height="match_parent" />
+
+
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></com.example.krcm110.myapplication.app.view.custome.component.TitleLayout>
-    <TextView
-        android:id="@+id/mainText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Hello World!" />
-        <TextView
-            android:id="@+id/textPatch"
-            android:text="@string/app_name"
-            android:layout_width="wrap_content"
-            android:layout_gravity="center"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-    <LinearLayout
-        android:orientation="vertical"
+            android:layout_gravity="left"
+            android:layout_height="match_parent">
+            <ImageView
+                android:src="@mipmap/img_avatar"
+                android:paddingTop="40dp"
+                android:layout_gravity="top"
+                android:layout_width="200dp"
+                android:layout_height="match_parent" />
+            <ListView
+                android:id="@+id/main_menu"
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+                android:choiceMode="singleChoice"
+                android:background="@color/light">
+            </ListView>
+        </LinearLayout>
+
+
+    <!--底部导航区域-->
+    <RelativeLayout
+        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
-        android:layout_gravity="left"
-        android:layout_height="match_parent">
-        <ListView
-            android:id="@+id/main_menu"
-            android:layout_width="200dp"
-            android:layout_height="match_parent"
-            android:choiceMode="singleChoice"
-            android:background="@color/light">
-        </ListView>
-    </LinearLayout>
-</android.support.v4.widget.DrawerLayout>
+        android:layout_height="90dp">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_above="@+id/tab_layout"
+            android:background="@color/google_yellow" />
+        <com.example.krcm110.myapplication.com.Utils.CommonTabLayoutBulge
+            android:layout_alignParentBottom="true"
+            app:tl_divider_color="@color/google_red"
+            android:id="@+id/tab_layout"
+            android:layout_width="match_parent"
+            app:tl_underline_color="@color/google_yellow"
+            android:layout_height="60dp">
+        </com.example.krcm110.myapplication.com.Utils.CommonTabLayoutBulge>
+        <com.example.krcm110.myapplication.com.view.custom.BtnImageSwitch
+            android:id="@+id/btn_table_center"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            app:normalStatus="@mipmap/tab_main_center" />
+    </RelativeLayout>
+    </android.support.v4.widget.DrawerLayout>
+</RelativeLayout>
