--- a/app/src/main/res/layout/custom_title.xml
+++ b/app/src/main/res/layout/custom_title.xml
@@ -2,8 +2,10 @@
 <LinearLayout
     android:orientation="horizontal"
     android:background="@color/google_red"
+    android:paddingTop="30dp"
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <Button
         android:id="@+id/btn_BackActivity"
         android:text="back"
