--- a/app/src/main/res/values-v19/styles.xml
+++ b/app/src/main/res/values-v19/styles.xml
@@ -1,12 +1,15 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <!--Windows 最上方的标题栏背景效果-->
         <!--<item name="colorPrimaryDark">@color/colorPrimary</item>-->
         <item name="colorAccent">@color/colorAccent</item>
         <item name="windowNoTitle">true</item>
+        <!--状态栏半透明-->
+        <item name="android:windowTranslucentStatus">true</item>
+        <!--虚拟按键半透明-->
         <item name="android:windowTranslucentNavigation">true</item>
     </style>
 </resources>
