--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <declare-styleable name="CircleIcon">
         <attr name="circleText" format="string" />
         <attr name="dd" format="string"/>
         <attr name="circleColor" format="color" />
         <attr name="circleTextSize" format="dimension" />
         <attr name="circleIcon" format="reference" />
+    </declare-styleable>
+
+    <!--reference某资源的ID-->
+    <declare-styleable name="BtnSwitch">
+        <attr name="normalStatus" format="reference"></attr>
+        <attr name="selectStatus" format="reference"></attr>
+        <attr name="autoSwitch" format="boolean">true</attr>
     </declare-styleable>
 </resources>
