--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:paddingTop="20dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
     <com.example.krcm110.myapplication.app.ui.HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -12,90 +12,56 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal" >
-            <ImageView
-                android:id="@+id/image0"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/ic_launcher" />
-            <ImageView
+            <com.example.krcm110.myapplication.app.view.custome.view.ButtonSwitchChild
                 android:id="@+id/image1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/ic_launcher" />
-
-            <ImageView
+                app:normalStatus="@mipmap/ic_launcher"/>
+            <com.example.krcm110.myapplication.app.view.custome.view.ButtonSwitchChild
                 android:id="@+id/image2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/ic_launcher" />
-
-
-            <ImageView
+                app:normalStatus="@mipmap/ic_launcher"/>
+            <com.example.krcm110.myapplication.app.view.custome.view.ButtonSwitchChild
                 android:id="@+id/image3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/ic_launcher" />
-
-            <ImageView
+                app:normalStatus="@mipmap/ic_launcher"/>
+            <com.example.krcm110.myapplication.app.view.custome.view.ButtonSwitchChild
                 android:id="@+id/image4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/ic_launcher" />
-
-            <ImageView
+                app:normalStatus="@mipmap/ic_launcher"/>
+            <com.example.krcm110.myapplication.app.view.custome.view.ButtonSwitchChild
                 android:id="@+id/image5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/ic_launcher" />
-
-            <ImageView
+                app:normalStatus="@mipmap/ic_launcher"/>
+            <com.example.krcm110.myapplication.app.view.custome.view.ButtonSwitchChild
                 android:id="@+id/image6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/ic_launcher" />
-
-            <ImageView
+                app:normalStatus="@mipmap/ic_launcher"/>
+            <com.example.krcm110.myapplication.app.view.custome.view.ButtonSwitchChild
                 android:id="@+id/image7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/ic_launcher" />
-
-            <ImageView
+                app:normalStatus="@mipmap/ic_launcher"/>
+            <com.example.krcm110.myapplication.app.view.custome.view.ButtonSwitchChild
                 android:id="@+id/image8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/ic_launcher" />
-
-            <ImageView
+                app:normalStatus="@mipmap/ic_launcher"/>
+            <com.example.krcm110.myapplication.app.view.custome.view.ButtonSwitchChild
                 android:id="@+id/image9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/ic_launcher" />
-            <ImageView
-                android:id="@+id/image10"
+                app:normalStatus="@mipmap/ic_launcher"/>
+            <com.example.krcm110.myapplication.app.view.custome.view.ButtonSwitchChild
+                android:id="@+id/image0"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/ic_launcher" />
-            <ImageView
-                android:id="@+id/image11"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/ic_launcher" />
-            <ImageView
-                android:id="@+id/image12"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/ic_launcher" />
-            <ImageView
-                android:id="@+id/image13"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/ic_launcher" />
-            <ImageView
-                android:id="@+id/image14"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/ic_launcher" />
+                app:normalStatus="@mipmap/ic_launcher"/>
         </LinearLayout>
     </com.example.krcm110.myapplication.app.ui.HorizontalScrollView>
     <!--顶部的导航条-->
@@ -114,6 +80,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
     </FrameLayout>
+    <!-- 进度条拖动-->
     <SeekBar
         android:id="@+id/animationSeekBar"
         android:layout_margin="40dp"
