--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,7 +63,7 @@
             app:tl_underline_color="@color/google_yellow"
             android:layout_height="60dp">
         </com.example.krcm110.myapplication.com.Utils.CommonTabLayoutBulge>
-        <com.example.krcm110.myapplication.com.view.custom.BtnImageSwitch
+        <com.example.krcm110.myapplication.com.view.custom.button.ImageBtnSwitch
             android:id="@+id/btn_table_center"
             android:layout_width="90dp"
             android:layout_height="90dp"
