--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:paddingTop="20dp"
+    android:id="@+id/parentLayout"
     android:layout_height="match_parent">
     <com.example.krcm110.myapplication.app.ui.HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -12,56 +13,28 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal" >
-            <com.example.krcm110.myapplication.app.view.custome.view.ButtonSwitchChild
+            <com.example.krcm110.myapplication.com.view.custom.button.ImageButtonFilter
                 android:id="@+id/image1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:normalStatus="@mipmap/ic_launcher"/>
-            <com.example.krcm110.myapplication.app.view.custome.view.ButtonSwitchChild
+            <com.example.krcm110.myapplication.com.view.custom.button.ImageButtonFilter
                 android:id="@+id/image2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:normalStatus="@mipmap/ic_launcher"/>
-            <com.example.krcm110.myapplication.app.view.custome.view.ButtonSwitchChild
+            <com.example.krcm110.myapplication.com.view.custom.button.ImageButtonFilter
                 android:id="@+id/image3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:normalStatus="@mipmap/ic_launcher"/>
-            <com.example.krcm110.myapplication.app.view.custome.view.ButtonSwitchChild
+            <com.example.krcm110.myapplication.com.view.custom.button.ImageBtnSwitch
                 android:id="@+id/image4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:normalStatus="@mipmap/ic_launcher"/>
-            <com.example.krcm110.myapplication.app.view.custome.view.ButtonSwitchChild
-                android:id="@+id/image5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:normalStatus="@mipmap/ic_launcher"/>
-            <com.example.krcm110.myapplication.app.view.custome.view.ButtonSwitchChild
-                android:id="@+id/image6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:normalStatus="@mipmap/ic_launcher"/>
-            <com.example.krcm110.myapplication.app.view.custome.view.ButtonSwitchChild
-                android:id="@+id/image7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:normalStatus="@mipmap/ic_launcher"/>
-            <com.example.krcm110.myapplication.app.view.custome.view.ButtonSwitchChild
-                android:id="@+id/image8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:normalStatus="@mipmap/ic_launcher"/>
-            <com.example.krcm110.myapplication.app.view.custome.view.ButtonSwitchChild
-                android:id="@+id/image9"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:normalStatus="@mipmap/ic_launcher"/>
-            <com.example.krcm110.myapplication.app.view.custome.view.ButtonSwitchChild
-                android:id="@+id/image0"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:normalStatus="@mipmap/ic_launcher"/>
+                app:normalStatus="@mipmap/btn_zjm_lt_bottom_nor"
+                app:selectStatus="@mipmap/btn_zjm_lt_bottom_pre"
+                app:autoSwitch="true"/>
         </LinearLayout>
     </com.example.krcm110.myapplication.app.ui.HorizontalScrollView>
     <!--顶部的导航条-->
