add my custom button,defullt havae click effect,the button have click effect on default status.

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -8,6 +8,7 @@
         <attr name="circleIcon" format="reference" />
     </declare-styleable>
     <!--reference某资源的ID-->
+    <!--自定义按钮切换属性BtnSwitch-->
     <declare-styleable name="BtnSwitch">
         <attr name="normalStatus" format="reference"></attr>
         <attr name="selectStatus" format="reference"></attr>
