--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="padding_tab_layout_bottom">51dp</dimen>
     <dimen name="dp16">16dp</dimen>
     <dimen name="dp8">8dp</dimen>
     <dimen name="dp4">4dp</dimen>
