--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -25,4 +25,5 @@
     <dimen name="user_center_avatar_size">80dp</dimen>
     <dimen name="dp36">36dp</dimen>
     <dimen name="square_img_height">100dp</dimen>
+    <dimen name="textSize_titleSmall">16sp</dimen>
 </resources>
