--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,4 +25,5 @@
     <!-- title 半透明背景颜色 -->
     <color name="color_title_bg">#CCFFFFFF</color>
     <color name="color_darker_gray">#aaa</color>
+    <color name="color_translucent">#00000000</color>
 </resources>
