--- a/app/src/main/res/layout/fragment_hot.xml
+++ b/app/src/main/res/layout/fragment_hot.xml
@@ -2,5 +2,8 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+<TextView
+    android:id="@+id/textView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
 </android.support.constraint.ConstraintLayout>
